--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_700"
-    tools:context=".ContactsFragment">
+    tools:context=".fragments.ContactsFragment">
+
+
 
     <TextView
         android:layout_width="match_parent"
