--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ListFragment">
+    tools:context=".fragments.ListFragment"
+    android:padding="15dp"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/list_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="LIST"
-        android:textSize="26dp"/>
+        android:layout_height="wrap_content"
+        android:text="@string/list"
+        android:textSize="26sp"
+        android:textAlignment="center"/>
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
