--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -21,6 +21,10 @@
             android:id="@+id/nav_list"
             android:title="@string/list"
             android:icon="@drawable/baseline_format_list_bulleted_24"/>
+        <item
+            android:id="@+id/nav_faculties"
+            android:title="@string/faculties"
+            android:icon="@drawable/baseline_format_list_bulleted_24"/>
 
         <item
             android:id="@+id/nav_contacts"
