--- a/app/src/main/res/layout/fragment_faculties.xml
+++ b/app/src/main/res/layout/fragment_faculties.xml
@@ -8,10 +8,10 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/faculties_text"
+        android:id="@+id/faculty_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Faculties"
+        android:text="@string/faculties"
         android:textSize="26sp"
         android:textAlignment="center"
         android:textColor="@color/black"/>
