switching activities updated

--- a/app/src/main/res/layout/list_item_department.xml
+++ b/app/src/main/res/layout/list_item_department.xml
@@ -9,6 +9,7 @@
         android:id="@+id/discipline_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="18sp"
+        android:textColor="@color/black"/>
 
 </LinearLayout>
