--- a/app/src/main/res/layout/list_item_discipline.xml
+++ b/app/src/main/res/layout/list_item_discipline.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:padding="16dp" />
+        android:padding="16dp"
+        android:textColor="@color/black"/>
 
     <View
         android:layout_width="match_parent"
