--- a/app/src/main/res/layout/list_item_specialty.xml
+++ b/app/src/main/res/layout/list_item_specialty.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textColor="@color/black"/>
 
 </LinearLayout>
