--- a/app/src/main/res/layout/activity_disciplines.xml
+++ b/app/src/main/res/layout/activity_disciplines.xml
@@ -8,7 +8,7 @@
         android:id="@+id/discipline_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Disciplines"
+        android:text="@string/disciplines"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
