--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/list_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/list"
+        android:text="@string/disciplines"
         android:textSize="26sp"
         android:textAlignment="center"/>
 
