--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -19,7 +19,7 @@
 
         <item
             android:id="@+id/nav_list"
-            android:title="@string/list"
+            android:title="@string/disciplines"
             android:icon="@drawable/baseline_format_list_bulleted_24"/>
         <item
             android:id="@+id/nav_faculties"
