sylabuses opening added

--- a/app/src/main/res/layout/activity_sylabus.xml
+++ b/app/src/main/res/layout/activity_sylabus.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
-
+    tools:context=".activities.SylabusActivity"
+    android:orientation="vertical">
     <TextView
-        android:id="@+id/specialty_text_view"
+        android:id="@+id/sylabus_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/sylabuses"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/black"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/specialty_recycler_view"
+        android:id="@+id/sylabus_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </LinearLayout>
