--- a/app/src/main/res/layout/activity_disciplines.xml
+++ b/app/src/main/res/layout/activity_disciplines.xml
@@ -17,7 +17,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/discipline_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/sylabus_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/sylabuses" />
 
 </LinearLayout>
