--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -19,8 +19,8 @@
 
         <item
             android:id="@+id/nav_list"
-            android:title="@string/disciplines"
-            android:icon="@drawable/baseline_format_list_bulleted_24"/>
+            android:title="@string/website"
+            android:icon="@drawable/baseline_web_24"/>
         <item
             android:id="@+id/nav_faculties"
             android:title="@string/faculties"
