--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -18,7 +18,7 @@
             android:icon="@drawable/baseline_info_24"/>
 
         <item
-            android:id="@+id/nav_list"
+            android:id="@+id/nav_website"
             android:title="@string/website"
             android:icon="@drawable/baseline_web_24"/>
         <item
